src/components/InteractivePiano.css
.interactive-piano__piano-container {
  display: inline-flex;
  box-sizing: border-box;
  /* border-top: 10px solid #904ae9; */
  position: relative;
  margin: auto;
  touch-action: none;
  user-select: none;
}

.interactive-piano__piano-container::after {
  content: '';
  width: 100%;
  height: 5px;
  background-color: rgba(68, 68, 68, 0.1);
  position: absolute;
  top: 0;
}

.interactive-piano__keyboard-container {
  display: flex;
  flex: 1;
  z-index: 1; 
}

.interactive-piano__accidental-key__wrapper {
  position: relative;
  width: 0;
}

.interactive-piano__accidental-key {
  /* Webkit / Chrome Specific CSS to remove tap highlight color */
  -webkit-tap-highlight-color: transparent;
  /* Firefox Specific CSS to remove button differences and focus ring */
  background-image: none;
  position: absolute;
  transform: translateX(-50%);
  cursor: pointer;
  background: #444;
  border-radius: 0px 0px 3px 3px;
  box-sizing: border-box;
  padding: 5px;
  outline: none;
  color: #dbdbdb;
}

.interactive-piano__accidental-key--playing-by-me {
  background: #904ae9;
  color: #fff;
}

.interactive-piano__accidental-key--playing-by-others {
  background: #E1A546;
  color: #fff;
}

.interactive-piano__natural-key {
  /* Webkit / Chrome Specific CSS to remove tap highlight color */
  -webkit-tap-highlight-color: transparent;
  /* Firefox Specific CSS to remove button differences and focus ring */
  background-image: none;
  cursor: pointer;
  background: #fafafa;
  border-radius: 0 0 3px 3px;
  border-color: rgba(73, 73, 73, 0.2);
  padding: 10px;
  outline: none;
  box-sizing: border-box;
  color: #444;
}

.interactive-piano__natural-key--playing-by-me {
  border-bottom: 10px solid #904ae9;
  color: #904ae9;
}

.interactive-piano__natural-key--playing-by-others {
  border-bottom: 10px solid #E1A546;
  color: #E1A546;
}

.interactive-piano__text-container {
  pointer-events: none;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  font-size: 1rem;
}

.interactive-piano__text--top-text {
  pointer-events: none;
  color: rgb(136, 134, 134);
  margin-bottom: 3px; 
}

.interactive-piano__text--bottom-text {
  pointer-events: none;
}

.interactive-piano__octave-shift-key {
  /* Webkit / Chrome Specific CSS to remove tap highlight color */
  -webkit-tap-highlight-color: transparent;
  /* Firefox Specific CSS to remove button differences and focus ring */
  background-image: none;
  cursor: pointer;
  background: #BAAED1;
  width: 30px;
  border: none;
  outline: none;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2; 
}

.interactive-piano__octave-shift-key:first-of-type {
  margin-left: 0;
}

.interactive-piano__octave-shift-key:last-of-type {
  margin-right: 0;
}

